import "EventIdCommand.proto";

option java_outer_classname="SyncEventsCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message SyncEventsCommand {	
	optional int64 requestId = 1;
	repeated EventIdCommand eventIds= 2;
}